--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="links"><a href="#videos">My Videos</a></li>
             <li class="links"><a href="#work">Work</a></li>
             <li class="links"><a href="#writings">Writings</a></li>
-            <li class="links"><a href="#Welcome">Contact</a></li>
+            <li class="links"><a href="#contact">Contact</a></li>
         </ul>
     </center>
     <section id="Welcome">
